Padding on formlines first-child removed to fix clipping of color swatch

--- a/src/style/panel.less
+++ b/src/style/panel.less
@@ -134,7 +134,7 @@
 
 .formline__no-padding {
     padding-top: 0.2rem;
-    padding-bottom: 0.2rem;    
+    padding-bottom: 0.1rem;    
 }
 
 .formline:first-child {
